Replace String.format with string.formatted